--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
             <h2 class="text-3xl font-bold mb-6">Beneficios del Quiromasaje</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="p-6">
-                    <img src="imagenes/quiromasaje1.jpeg" alt="Relajación" class="mx-auto mb-4">
+                    <img src="imagenes/Clinica1.jpg" alt="Relajación" class="mx-auto mb-4">
                     <h3 class="text-xl font-semibold">Relajación Profunda</h3>
                     <p class="text-gray-600">Reduce el estrés y promueve la calma interior.</p>
                 </div>
                 <div class="p-6">
-                    <img src="imagenes/espalda.jpeg" alt="Flexibilidad" class="mx-auto mb-4">
+                    <img src="imagenes/Clinica2jpg.jpg" alt="Flexibilidad" class="mx-auto mb-4">
                     <h3 class="text-xl font-semibold">Mayor Flexibilidad</h3>
                     <p class="text-gray-600">Mejora la elasticidad muscular y articular.</p>
                 </div>
                 <div class="p-6">
-                    <img src="imagenes/amai.jpeg" alt="Energía" class="mx-auto mb-4">
+                    <img src="imagenes/Clinica3.jpg" alt="Energía" class="mx-auto mb-4">
                     <h3 class="text-xl font-semibold">Incremento de Energía</h3>
                     <p class="text-gray-600">Recarga tu cuerpo con energía renovada.</p>
                 </div>
@@ -82,7 +82,7 @@
     <!-- Contacto Section -->
     <section id="contacto" class="py-12">
         <div class="container mx-auto">
-            <h2 class="text-3xl font-bold text-center mb-6">Ines Maria Carballar Nisa</h2>
+            <h2 class="text-3xl font-bold text-center mb-6">Ines María Carballar Nisa</h2>
             <div class="max-w-lg mx-auto bg-white shadow-lg rounded-lg p-6 text-center">
                 <a href="https://wa.me/637567274" target="_blank">
                     <button class="bg-green-500 hover:bg-green-700 text-white px-6 py-3 rounded-lg">
