--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <h2 class="text-3xl font-bold mb-6">Nuestros Servicios</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="bg-white shadow-lg rounded-lg p-6">
-                    <h3 class="text-xl font-semibold mb-4">Acupuntura y neurotaping</h3>
-                    <p class="text-gray-600">¡Equilibra tu energía! Alivia el dolor, reduce el estrés y mejora tu bienestar general con finas agujas colocadas en puntos clave de tu oreja.
+                    <h3 class="text-xl font-semibold mb-4">Auriculoterapia y neurotaping</h3>
+                    <p class="text-gray-600">¡Equilibra tu energía! Alivia el dolor, reduce el estrés y mejora tu bienestar general trabajando puntos claves de tu oreja.
                         ¡Recupera tu movimiento! Este innovador tratamiento con cintas adhesivas ayuda a reducir el dolor, acelera la recuperación y mejora la movilidad de tus músculos y articulaciones.
                     </p>
                 </div>
